# EarningsTradingSystem_V1

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_today.sh  tickers.csv
.github/workflows/: backtest.yml  ci.yml  ets-analysis.yml  ets-backtest.yml  ets-env-setup.yml  ets-full.yml  ets-provider-validate.yml  ets-smoke-cli.yml  ets_analytics.yml  ets_full_smoke.yml  test-integration.yml  test-smoke.yml
metrics/: perf.json
scripts/: calc_integration_offline.py  cli_mock_run.py  dev_setup.sh  final_fix.sh  fix_final.sh  generate_summary.py  patch_cleanup.sh  run_analytics.py  run_backtest.py  run_stage_b.py  smoke_offline.py  validate_providers.py
scripts/ci/: run_integration_tests.sh  run_smoke_tests.sh
src/: sitecustomize.py
src/ets/: __init__.py  __main__.py  main.py  main.py.bak2  main.py.bak3  main.py.bak4  main.py.pre-fix  utils.py
src/ets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ets/analysis/: history_compare.py  sector_summary.py
src/ets/backtest/: historical_loader.py  perf_metrics.py  performance_metrics.py  signal_rebuilder.py
src/ets/config/: config.yaml  defaults.py  env_loader.py  sector_etf_map.yaml  weights.yaml
src/ets/core/: env.py  factors.py  finalize.py  normalization.py  run_context.py  scoring.py  selection.py  utils.py  validator.py
src/ets/data/: calendar.py  market_refs.py
src/ets/data/providers/: __init__.py  fetchers.py  finnhub_client.py  (+7 more)
src/ets/factors/: cache_utils.py  sector_utils.py
src/ets/outputs/: csv_writer.py  logger.py  telemetry.py
src/ets/scripts/: build_factor_a_raw.py  build_factor_cal_raw.py  build_factor_etff_raw.py  build_factor_m_raw.py  build_factor_m_raw.py.bak2  build_factor_m_raw.py.bak3  build_factor_m_raw.py.bak4  build_factor_m_raw.py.bak_final  build_factor_m_raw.py.bak_purge  build_factor_peer_raw.py  build_factor_sigma_raw.py  build_factor_srm_raw.py  build_factor_tau_raw.py  build_factor_trend_raw.py  build_factor_v_raw.py  build_factor_vix_raw.py  build_factors.py  build_factors_latest.py  build_universe.py  calc_sector_scores.py  diag_providers.py  fetch_outcomes.py  inspect_calendar.py  prefetch.py  prefetch_daily.py  run_all_tickers_policy.py  run_dynamic_tickers.py  test_finnhub_debug.py  update_sector_weights.py  update_sector_weights.py.bak2
src/ets/util/: dicts.py
src/ets/validation/: provider_parity.py
tests/: conftest.py  test_backtest_core.py  test_backtest_perf.py  test_caps_scaling.py  test_cli_run_mock.py  test_history_compare.py  test_output_naming_rotation.py  test_provider_parity.py  test_scoring_smoke.py  test_sector_summary.py  test_smoke_output.py
tests/fixtures/: mock_fundamentals.json  mock_history.csv  mock_prices.json  mock_quotes.json  mock_signals.csv  tickers.csv  tickers_small.csv
tests/integration/: test_backtest_roundtrip.py  test_provider_registry_offline.py
tests/smoke/: test_cli_help.py  test_config_determinism.py  test_imports.py
(+9 files in other folders)
