[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ets"
version = "0.1.0"
description = "Pre-earnings screening MVP (sector-aware scoring)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="NPR Media", email="dev@example.com" }]
dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "yfinance==0.2.43",
  "requests==2.32.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.1",
  "PyYAML==6.0.2",
]

[project.scripts]
ets-run = "ets.main:main"
ets-outcomes = "ets.scripts.fetch_outcomes:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ets","ets.core","ets.data","ets.data.providers","ets.outputs","ets.config","ets.scripts"]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["src"]
