[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ets"
version = "0.1.0"
description = "Earnings Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","SIM","W","C90"]
lint.ignore = []
exclude = [".venv",".git","dist","build"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -ra -W error"
testpaths = ["tests"]
markers = [
  "smoke: lightweight, <60s sanity tests",
  "integration: full offline integration tests using fixtures/mocks",
]

[tool.coverage.run]
branch = true
source = ["src/ets"]
omit = [
  "src/ets/__main__.py",
  "src/ets/_version.py"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
