[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ets"
version = "0.1.0"
description = "Earnings Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "yfinance>=0.2.43",
  "requests>=2.32.3",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2024.1",
  "python-dotenv>=1.0.0",
  "pytrends>=4.9.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.bak*", "*.tmp"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","SIM","W","C90"]
lint.ignore = []
exclude = [".venv",".git","dist","build"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -ra -W error"
testpaths = ["tests"]
markers = [
  "smoke: lightweight, <60s sanity tests",
  "integration: full offline integration tests using fixtures/mocks",
]

[tool.coverage.run]
branch = true
source = ["src/ets"]
omit = [
  "src/ets/__main__.py",
  "src/ets/_version.py"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
